resolve bug, when ice is not connect its not showing error msg

--- a/app/src/pages/admin/styles/EmailConfiguration.scss
+++ b/app/src/pages/admin/styles/EmailConfiguration.scss
@@ -11,6 +11,10 @@
     margin-left: 1rem;
     font-size: 1rem;
 }
+.providerdropdown{
+    margin-left: 1rem;
+    width: 20%;
+}
 .email_setting_header{
     line-height: 3rem;
     font-weight: bold;
